28-11-23 / Mejora de funciones.

--- a/src/Vista/Main.form
+++ b/src/Vista/Main.form
@@ -4,12 +4,12 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="jmAcciones">
+        <Menu class="javax.swing.JMenu" name="jmAcciones1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Accciones"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmAccionesActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmAcciones1ActionPerformed"/>
           </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jmiAgregar">
