--- a/src/Vista/Modificar.form
+++ b/src/Vista/Modificar.form
@@ -235,6 +235,9 @@
           <ComponentRef name="tipoDeudaGroup"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Directa"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Default Cursor"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbDirectaActionPerformed"/>
